deploy/retrieveUnpackaged/objects/SFDC_Issue__c.object
<CustomObject>
    <description>Issue related to a Project</description>
    <fields>
        <fullName>Case__c</fullName>
        <inlineHelpText>Related Case that prompted issue or documenting detail work of issue.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC__c</fullName>
        <inlineHelpText>Person whom you can contact for additional details.</inlineHelpText>
        <label>POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Description__c</fullName>
        <description>Description of the Issue in detail.</description>
        <label>Issue Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Name__c</fullName>
        <label>Issue Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Priority__c</fullName>
        <label>Issue Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Very Urgent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Status__c</fullName>
        <label>Issue Status</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Being Addressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - In Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Project__c</fullName>
        <description>Issues are details of the master project record</description>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipName>R00N50000001oYKTEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>Issue Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001oYKIEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SFDC_Issue_Name__c</columns>
        <columns>SFDC_Issue_Status__c</columns>
        <columns>SFDC_Issue_Priority__c</columns>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>POC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HighPriorityOpenIssues</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Issue_Name__c</columns>
        <columns>SFDC_Issue_Description__c</columns>
        <columns>SFDC_Issue_Status__c</columns>
        <columns>SFDC_Issue_Priority__c</columns>
        <columns>Case__c</columns>
        <columns>POC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Issue_Status__c</field>
            <operation>notEqual</operation>
            <value>3 - Closed</value>
        </filters>
        <filters>
            <field>SFDC_Issue_Priority__c</field>
            <operation>equals</operation>
            <value>3 - High,4 - Very Urgent</value>
        </filters>
        <label>High Priority Open Issues</label>
    </listViews>
    <nameField>
        <displayFormat>ISS - {0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>